# ArraySeq

./: LICENSE  LICENSE.md  MANIFEST.in  ReadMe  ReadMe.md  gitignore  requirements.txt  setup.cfg
Misc/: ArraySeq_Probe_Design.Rmd  ArraySeq_Probe_Design.html
Preprocessing/Mapping/: STARSolo.sh
Preprocessing/Spot_Image_Generation/: Spot_Image_Generation.py
arrayseq/: __init__.py
arrayseq/plotting/: Plotting_2D.py  Plotting_3D.py  _Plotting_3D.py  __init__.py
arrayseq/preprocess/: Auto_align.py  Image_processing.py  Manual_align.py  Multi_Tissue_and_3D.py  _Auto_align.py  _Image_processing.py  _Manual_align.py  _Multi_Tissue_and_3D.py  __init__.py
arrayseq/tools/: __init__.py  _create_and_modify_arrayseq_functions.py  create_and_modify_arrayseq_functions.py
