[metadata]
name = arrayseq
version = 0.0.1
author = Denis Cipurko
description = Processing, analysis, and visualization for the Array-seq platform. 
long_description_content_type = text/markdown
long_description = file: README.md
keywords = Array-seq, spatial transcriptomics
url = https://github.com/chevrierlab/ArraySeq
license = Apache License, Version 2.0
author_email = dcipurko@gmail.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    anndata>=0.7.6
    matplotlib>=3.5.2
    numpy>=1.22
    pandas>=1.3.5
    plotly>=5.3.1
    scanpy>=1.8.2
    scipy>=1.10.1
    skimage>=0.19.3
    svgwrite>=1.4.3
    tqdm>=4.64.0
    Wand>=0.6.13
    importlib-metadata
python_requires = >=3.7

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
docs = 
    sphinx==5.3.0
    sphinx-autodoc-typehints==1.18.1
    sphinx-rtd-theme==1.0.0
    sphinx-rtd-size==0.2.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinx-mdinclude==0.5.3
    nbsphinx==0.8.9
    ipykernel==6.16.0
    sphinx-gallery==0.11.1

[options.packages.find]
exclude =
    tests*
    docs*
    data*
    tutorials*
